GNOME Bugzilla – Bug 733592
av-cp: Look for didl-object instead of didl-item
Last modified: 2019-02-22 05:57:48 UTC
Let's make it a little easier to test playlists...
Created attachment 281460 [details] [review] av-cp: Look for didl-object instead of didl-item This way it's possible to click "play" e.g. on a directory that exposes a playlist resource, and get a renderer to play it (assuming the resource is compatible with the renderer).
In principle I agree, but the whole playlist handling is borked in av-cp; it uses next/prev to iterate on the treeview, not calling Next()/Prev() on the UPnP renderer.
Attachment 281460 [details] pushed as 96ecf37 - av-cp: Look for didl-object instead of didl-item