av-cp: Look for didl-object instead of didl-item

This way it's possible to click "play" e.g. on a directory that exposes a
playlist resource, and get a renderer to play it (assuming the resource
is compatible with the renderer).

https://bugzilla.gnome.org/show_bug.cgi?id=733592